# rgbd

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md  mainpage.dox  manifest.xml  package.xml
.github/workflows/: main.yml
include/rgbd/: Client.h  Image.h  RGBDImage.h  Server.h  ServerShmOnly.h  View.h  image_header.h  serialization.h  shared_mem_client.h
include/rgbd_transport/: Client.h  ClientRaw.h  RGBDImage.h  Server.h  types.h
launch/: rose_server.launch  server_amigo.launch  standard_kinect.launch  static_top_kinect_server.launch  top_kinect_server.launch
msg/: RGBDImage.msg  RGBDMsg.msg
python_rgbd/: CMakeLists.txt  package.xml
python_rgbd/PyRGBD/: PyRGBD.cpp  PyRGBD.h  ndarray_converter.cpp  ndarray_converter.h
python_rgbd/doc/: conf.py  index.rst
python_rgbd/env-hooks/: python_rgbd_site_packages.tcsh.in
rgbd/: CMakeLists.txt  README.md  nodelet_plugins.xml  package.xml  rosdoc.yaml
rgbd/include/rgbd/: Client.h  Client_RGBD.h  Client_ROS.h  Client_SHM.h  Image.h  Server.h  ServerShmOnly.h  Server_RGBD.h  Server_SHM.h  View.h  client.h  client_rgbd.h  client_ros.h  client_ros_base.h  client_shm.h  image.h  image_header.h  serialization.h  server.h  server_rgbd.h  server_ros.h  server_shm.h  shared_mem_client.h  shared_mem_server.h  tools.h  types.h  utility.h  view.h
rgbd/include/rgbd/ros/: conversions.h
rgbd/launch/: shm_server.launch  standard_kinect.launch  test_client.launch  test_client2.launch  test_server.launch
rgbd/src/: Client.cpp  Client_RGBD.cpp  Client_ROS.cpp  Client_SHM.cpp  Server.cpp  ServerShmOnly.cpp  Server_RGBD.cpp  Server_SHM.cpp  View.cpp  client.cpp  client_rgbd.cpp  client_ros.cpp  client_ros_base.cpp  client_shm.cpp  full_screen_viewer.cpp  get_3d_point_from_image_roi_node.cpp  image.cpp  rgbd_to_ros.cpp  rgbd_to_shm.cpp  ros_to_rgbd.cpp  save.cpp  serialization.cpp  server.cpp  server_rgbd.cpp  server_ros.cpp  server_shm.cpp  shared_mem_client.cpp  shared_mem_server.cpp  tools.cpp  utility.cpp  view.cpp
rgbd/src/nodelets/: ros_to_rgbd.cpp
rgbd/src/ros/: conversions.cpp
rgbd/test/: README.md  connection.test  connection_gtest.cpp  connection_rgbd.test  connection_rgbd_gtest.cpp  connection_ros.test  connection_ros_gtest.cpp  connection_shm.test  connection_shm_gtest.cpp  hostname_sub_value_test  image_gtest.cpp  pub_hostname.test  pub_hostname_test.cpp  serialization_gtest.cpp  shm.test  shm_gtest.cpp  shm_server.test  shm_server_gtest.cpp  test_client.cpp  test_client_headless.cpp  test_client_headless_rgbd.cpp  test_client_headless_ros.cpp  test_client_headless_shm.cpp  test_client_headless_templ.h  test_client_rgbd.cpp  test_client_ros.cpp  test_client_shm.cpp  test_client_templ.h  test_serialization.cpp  test_server.cpp  test_server_connection.cpp  test_server_rgbd.cpp  test_server_ros.cpp  test_server_shm.cpp  test_server_templ.h  test_shm.cpp  test_utils.h
rgbd/tools/: analyser.cpp  full_screen_viewer.cpp  multitool.cpp  presenter.cpp  record_to_video.cpp  rgbd_to_pcd.cpp  rgbd_to_png.cpp  rgbd_to_rgb_png.cpp  save.cpp  view.cpp  viewer.cpp
rgbd_image_buffer/: CMakeLists.txt  README.md  package.xml  rosdoc.yaml
rgbd_image_buffer/include/rgbd/image_buffer/: image_buffer.h
rgbd_image_buffer/src/: image_buffer.cpp
rgbd_msgs/: CMakeLists.txt  package.xml
scripts/: rgbd_monitor
src/: Client.cpp  ClientRaw.cpp  Image.cpp  RGBDImage.cpp  Server.cpp  ServerShmOnly.cpp  Server_shm_only.cpp  View.cpp  amigo_full_screen.cpp  get_3d_point_from_image_roi_node.cpp  rgbd_to_pc.cpp  rgbd_to_ros.cpp  rgbd_to_shm.cpp  save.cpp  serialization.cpp  server.cpp  server_shm_only.cpp  shared_mem_client.cpp  shared_mem_server.cpp  view.cpp  viewer.cpp
src/ros/: conversions.cpp
srv/: Project2DTo3D.srv
test/: test_client.cpp  test_serialization.cpp  test_server.cpp  test_sharedmem_client.cpp  test_sharedmem_server.cpp
tools/: multitool.cpp  record_to_video.cpp
