<?xml version="1.0"?>
<package>
  <name>rgbd</name>
  <version>0.0.0</version>
  <description>The rgbd package</description>

  <maintainer email="S.v.d.Dries@tue.nl">Sjoerd van den Dries</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>cv_bridge</depend>
  <depend>geolib2</depend>
  <depend>geometry_msgs</depend>
  <depend>image_geometry</depend>
  <depend>message_filters</depend>
  <depend>pcl_ros</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>tue_serialization</depend>
  <build_depend>message_generation</build_depend>

  <exec_depend>message_runtime</exec_depend>
</package>
