<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rgbd</name>
  <version>0.1.0</version>
  <description>The rgbd package</description>

  <maintainer email="MatthijsBurgh@outlook.com">Matthijs van der Burgh</maintainer>

  <license>TODO</license>

  <url type="bugtracker">https://github.com/tue-robotics/rgbd/issues</url>
  <url type="repository">https://github.com/tue-robotics/rgbd</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>cv_bridge</depend>
  <depend>boost</depend>
  <depend>geolib2</depend>
  <depend>geometry_msgs</depend>
  <depend>image_geometry</depend>
  <depend>message_filters</depend>
  <depend>nodelet</depend>
  <depend>pcl_ros</depend>
  <depend>pluginlib</depend>
  <depend>rgbd_msgs</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>tue_serialization</depend>

  <doc_depend>doxygen</doc_depend>

  <export>
    <rosdoc config="rosdoc.yaml" />
  </export>

</package>
