<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rgbd</name>
  <version>0.1.0</version>
  <description>Provides communication and tools for combined RGB and Depth images</description>

  <maintainer email="MatthijsBurgh@outlook.com">Matthijs van der Burgh</maintainer>

  <license>TODO</license>

  <url type="bugtracker">https://github.com/tue-robotics/rgbd/issues</url>
  <url type="repository">https://github.com/tue-robotics/rgbd</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>libboost-dev</depend>
  <depend>geolib2</depend>
  <depend>image_geometry</depend>
  <depend>libopencv-dev</depend>
  <depend>message_filters</depend>
  <depend>pcl_ros</depend>
  <depend>rgbd_msgs</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>tue_serialization</depend>

  <build_depend>cv_bridge</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>libboost-iostreams-dev</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>rosconsole_bridge</build_depend>

  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>libboost-iostreams-dev</exec_depend>
  <exec_depend>nodelet</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>rosconsole_bridge</exec_depend>

  <test_depend>catkin_lint_cmake</test_depend>
  <test_depend>rospy</test_depend>
  <test_depend>rostest</test_depend>
  <test_depend>std_msgs</test_depend>

  <doc_depend>doxygen</doc_depend>

  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
    <rosdoc config="rosdoc.yaml" />
  </export>

</package>
